# rust_game_of_life

./: Cargo.toml
src/: main.rs
