[package]
name = "rust_game_of_life"
version = "0.1.0"
authors = ["Frederik P. B. H. <frepbh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3", features = ["std", "winuser", "wincon", "errhandlingapi"] }

[dependencies]
crossterm = "^0.19"
rand = "^0.8"
